--- a/antoine_gouzy/Dockerfile/Dockerfile-web
+++ b/antoine_gouzy/Dockerfile/Dockerfile-web
@@ -4,4 +4,6 @@ RUN apt-get update
 RUN apt update -y 
 RUN apt install -y apache2
 
-EXPOSE 80
+WORKDIR /var/www/html
+
+CMD ["apache2ctl", "-D", "FOREGROUND"]
