--- a/antoine_gouzy/Dockerfile/Dockerfile-web
+++ b/antoine_gouzy/Dockerfile/Dockerfile-web
@@ -3,7 +3,8 @@ FROM ubuntu:24.04
 RUN apt-get update 
 RUN apt update -y 
 RUN apt install -y apache2
+RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables
 
 WORKDIR /var/www/html
 
-CMD ["apache2ctl", "-D", "FOREGROUND"]
+#CMD ["apache2ctl", "-D", "FOREGROUND"]
