--- a/celian_hache/docker-compose.yml
+++ b/celian_hache/docker-compose.yml
@@ -1,17 +1,26 @@
 services:
-  router: 
-    build: 
+  router:
+    build:
       context: ./router
     networks:
       private:
         ipv4_address: 172.18.0.2
       dmz:
         ipv4_address: 172.18.1.2
-    command: tail -f /dev/null
-      
+      public:
+        ipv4_address: 10.0.0.3
+    cap_add:
+      - NET_ADMIN 
+    command: >-
+      sh -c "
+      sysctl -w net.ipv4.ip_forward=1 && 
+      ip addr add 172.18.0.1/24 dev eth0 && 
+      ip addr add 172.18.1.1/24 dev eth1 &&  
+      tail -f /dev/null"
+
   user1:
     build:
-      context: ./private/user  
+      context: ./private/user
     networks:
       - private
     cap_add:
@@ -26,7 +35,7 @@ services:
 
   user2:
     build:
-      context: ./private/user  
+      context: ./private/user
     networks:
       - private
     cap_add:
@@ -57,6 +66,13 @@ services:
       - router
 
 networks:
+  public: 
+    driver: macvlan
+    driver_opts:
+        parent: enp0s31f6
+    ipam:
+      config:
+        - subnet: 10.0.0.0/24
   private:
     driver: bridge
     ipam: 
