--- a/celian_hache/docker-compose.yml
+++ b/celian_hache/docker-compose.yml
@@ -13,7 +13,34 @@ services:
       - NET_ADMIN 
     command: >-
       sh -c "
-      sysctl -w net.ipv4.ip_forward=1 && 
+      iptables -t nat -A POSTROUTING -o eth2 -j MASQUERADE &&
+      iptables -t nat -A PREROUTING -i eth2 -p tcp --dport 80 -j DNAT --to-destination 172.18.1.3:80 && 
+
+      iptables -P INPUT DROP &&
+      iptables -P OUTPUT ACCEPT &&
+      iptables -P FORWARD DROP &&
+
+      iptables -A INPUT -p icmp -j ACCEPT &&
+      iptables -A OUTPUT -p icmp -j ACCEPT &&
+
+      iptables -A INPUT -p tcp --dport 443 -j ACCEPT &&
+      iptables -A INPUT -p tcp --dport 80 -j ACCEPT &&
+      iptables -A INPUT -p tcp --dport 22 -j ACCEPT &&
+      iptables -A INPUT -p tcp --dport 53 -j ACCEPT &&
+      iptables -A INPUT -p udp --dport 53 -j ACCEPT &&
+
+      iptables -A FORWARD -i eth0 -o eth1 -j ACCEPT &&         
+      iptables -A FORWARD -i eth1 -o eth0 -j ACCEPT &&
+
+      iptables -A FORWARD -i eth0 -o eth2 -j ACCEPT &&
+      iptables -A FORWARD -i eth2 -o eth0 -j ACCEPT &&
+
+      iptables -A FORWARD -i eth1 -o eth2 -j ACCEPT &&
+      iptables -A FORWARD -i eth2 -o eth1 -j ACCEPT &&
+
+      iptables -A INPUT -i lo -j ACCEPT &&
+      iptables -A OUTPUT -o lo -j ACCEPT &&
+
       ip addr add 172.18.0.1/24 dev eth0 && 
       ip addr add 172.18.1.1/24 dev eth1 &&  
       tail -f /dev/null"
