--- a/antoine_gouzy/docker-compose.yml
+++ b/antoine_gouzy/docker-compose.yml
@@ -64,6 +64,27 @@ services:
       ip addr add 10.5.1.10/24 dev eth0 && 
       iptables -t nat -A POSTROUTING -o eth2 -j MASQUERADE &&
       iptables -t nat -A PREROUTING -i eth2 -p tcp --dport 80 -j DNAT --to-destination 10.5.2.2:80 &&
+
+      iptables -P INPUT DROP &&
+      iptables -P FORWARD DROP &&
+      iptables -P OUTPUT ACCEPT &&
+      iptables -A INPUT -p tcp --dport 443 -j ACCEPT  &&
+      iptables -A INPUT -p tcp --dport 80 -j ACCEPT   &&
+      iptables -A INPUT -p tcp --dport 22 -j ACCEPT   &&
+      iptables -A INPUT -p udp --dport 53 -j ACCEPT   &&
+      iptables -A INPUT -p tcp --dport 53 -j ACCEPT   &&
+      iptables -A INPUT -i lo -j ACCEPT               &&
+      iptables -A INPUT -p icmp -j ACCEPT             &&
+
+      iptables -A FORWARD -i eth0 -o eth2 -j ACCEPT   &&
+      iptables -A FORWARD -i eth2 -o eth0 -j ACCEPT   &&
+
+      iptables -A FORWARD -i eth1 -o eth2 -j ACCEPT   &&
+      iptables -A FORWARD -i eth2 -o eth1 -j ACCEPT   &&
+
+      iptables -A FORWARD -i eth0 -o eth1 -j ACCEPT   &&
+      iptables -A FORWARD -i eth1 -o eth0 -j ACCEPT   &&
+
       tail -f /dev/null"
 
 networks:
