--- a/celian_hache/docker-compose.yml
+++ b/celian_hache/docker-compose.yml
@@ -43,6 +43,9 @@ services:
 
       ip addr add 172.18.0.1/24 dev eth0 && 
       ip addr add 172.18.1.1/24 dev eth1 &&  
+
+      service isc-dhcp-server start &&
+
       tail -f /dev/null"
 
   user1:
@@ -56,6 +59,8 @@ services:
       sh -c "
       ip route del default &&
       ip route add default via 172.18.0.2 &&
+      ip addr flush dev eth0 &&
+      dhclient eth0 &&
       tail -f /dev/null"
     depends_on:
       - router
@@ -71,6 +76,8 @@ services:
       sh -c "
       ip route del default &&
       ip route add default via 172.18.0.2 &&
+      ip addr flush dev eth0 &&
+      dhclient eth0 &&
       tail -f /dev/null"
     depends_on:
       - router
@@ -79,7 +86,8 @@ services:
     build:
       context: ./dmz/webserver
     networks:
-      - dmz
+      dmz:
+        ipv4_address: 172.18.1.3
     cap_add:
       - NET_ADMIN
     ports:
