--- a/celian_hache/router/Dockerfile
+++ b/celian_hache/router/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:24.04
 
 RUN apt-get update && \
-    apt-get install -y wget iputils-ping iproute2 iptables traceroute isc-dhcp-server systemctl nano
+    apt-get install -y wget iputils-ping iproute2 iptables traceroute isc-dhcp-server systemctl tshark
 
 WORKDIR /home/user
 COPY dhcpd.conf /etc/dhcp/dhcpd.conf
