--- a/antoine_gouzy/web-server/Dockerfile
+++ b/antoine_gouzy/web-server/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:24.04
 RUN apt-get update 
 RUN apt update -y 
 RUN apt install -y apache2
-RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables
+RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables tshark
 
 WORKDIR /var/www/html
 
