--- a/antoine_gouzy/router/Dockerfile
+++ b/antoine_gouzy/router/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:24.04
 
 RUN apt-get update 
 RUN apt -y update
-RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables traceroute w3m isc-dhcp-server
+RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables traceroute w3m isc-dhcp-server tshark
 
 #Config DHCP
 COPY dhcpd.conf /etc/dhcp/dhcpd.conf
