[hache/dns] Add dns

--- a/celian_hache/dmz/webserver/Dockerfile
+++ b/celian_hache/dmz/webserver/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:24.04
 
 RUN apt-get update && \
-    apt-get install -y apache2 wget iputils-ping iproute2 iptables traceroute systemctl nano && \
+    apt-get install -y apache2 wget iputils-ping iproute2 iptables traceroute systemctl nano dnsutils && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
