--- a/celian_hache/docker-compose.yml
+++ b/celian_hache/docker-compose.yml
@@ -13,9 +13,17 @@ services:
       - NET_ADMIN 
     command: >-
       sh -c "
+      iptables -P INPUT DROP &&
+      iptables -P FORWARD DROP &&
+      iptables -P OUTPUT ACCEPT &&
+
       iptables -t nat -A POSTROUTING -o eth2 -j MASQUERADE &&
       iptables -t nat -A PREROUTING -i eth2 -p tcp --dport 80 -j DNAT --to-destination 172.18.1.4:80 && 
+      iptables -t nat -A PREROUTING -i eth2 -p tcp --dport 53 -j DNAT --to-destination 172.18.1.5:53 && 
+      iptables -t nat -A PREROUTING -i eth2 -p udp --dport 53 -j DNAT --to-destination 172.18.1.5:53 && 
 
+      iptables -A FORWARD -p udp --dport 53 -j ACCEPT &&
+      iptables -A FORWARD -p tcp --dport 53 -j ACCEPT &&
 
       iptables -A INPUT -p icmp -j ACCEPT &&
       iptables -A OUTPUT -p icmp -j ACCEPT &&
@@ -81,20 +89,34 @@ services:
 
   reverse-proxy:
     build:
-      context: ./reverse_proxy
+      context: ./dmz/reverse_proxy
     networks:
       dmz:
         ipv4_address: 172.18.1.4
     cap_add:
       - NET_ADMIN
-    ports:
-      - 8081:80
     
     command: >-
       sh -c "
       ip route del default &&
       ip route add default via 172.18.1.2 &&
       nginx -g 'daemon off;'"
+    depends_on:
+      - router
+
+  dns:
+    build:
+      context: ./dmz/dns
+    networks:
+      dmz:
+        ipv4_address: 172.18.1.5
+    cap_add:
+      - NET_ADMIN
+    command: >-
+      sh -c "
+      ip route del default &&
+      ip route add default via 172.18.1.2 &&
+      named -g -4 -u bind"
     depends_on:
       - router
 
@@ -106,8 +128,6 @@ services:
         ipv4_address: 172.18.1.3
     cap_add:
       - NET_ADMIN
-    ports:
-      - 8080:80
     command: >-
       sh -c "
       ip route del default &&
