--- a/celian_hache/router/dhcpd.conf
+++ b/celian_hache/router/dhcpd.conf
@@ -6,4 +6,5 @@ subnet 172.18.0.0 netmask 255.255.255.0 {
     option subnet-mask 255.255.255.0;
     option routers 172.18.0.1;
     option broadcast-address 172.18.0.255;
+    option domain-name-servers 172.18.1.5;
 }
