--- a/antoine_gouzy/router/dhcpd.conf
+++ b/antoine_gouzy/router/dhcpd.conf
@@ -8,4 +8,5 @@ subnet 10.5.1.0 netmask 255.255.255.0 {
     option routers 10.5.1.10;     # Adresse du routeur (gateway)
     option subnet-mask 255.255.255.0;
     option broadcast-address 10.5.1.255;
+    option domain-name-servers 10.5.2.4;
 }
