--- a/antoine_gouzy/user/Dockerfile
+++ b/antoine_gouzy/user/Dockerfile
@@ -2,4 +2,4 @@ FROM ubuntu:24.04
 
 RUN apt-get update 
 RUN apt -y update
-RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables traceroute w3m isc-dhcp-client tshark
+RUN apt -y install wget iproute2 inetutils-ping curl host mtr-tiny tcpdump iptables traceroute w3m isc-dhcp-client tshark dnsutils
